maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: not enough arguments for method keepHandOnSideWall: (compt: Int)Int.
Unspecified value parameter compt.
      compt=keepHandOnSideWall()
                              ^