maze.pledge.PledgeMaze.scala.code



override def run(){
  
  var compt:Int = 0;

  while(!estSurBiscuit()){
    
    while (!estFaceMur()){
      avance()   
    }
    gauche()
    compt+=1;
    
    while ((!estSurBiscuit() && getDirection != Direction.NORD) || (compt != 0 && getDirection != Direction.NORD)){  			 			
      compt=keepHandOnSideWall()
    }
  	  
  }  
  prendBiscuit()
}



def keepHandOnSideWall(compt : Int) : Int ={

  gauche()
  var compt1=compt+1;
  while (estFaceMur()){
    droite()
    compt1-=1;

  }
  avance()
  return(compt1)

}